kubernetes/apps/nextcloud/nextcloud.yaml
---
# Namespace for Nextcloud
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    ingress.svc.egress: allow # <--- opt-in label for ingress-controller traffic
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/cilium/cilium/main/install/kubernetes/quick-install.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
spec:
  # Ingress policy for Nextcloud pods - allow traffic from ingress-nginx
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tenant-root
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/cilium/cilium/main/install/kubernetes/quick-install.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-egress
  namespace: nextcloud
spec:
  # Egress policy for Nextcloud pods
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  egress:
    # PostgreSQL RW Service
    - toServices:
        - k8sService:
            namespace: nextcloud
            serviceName: nextcloud-db-rw
      toPorts:
        - ports:
            - port: "5432"
    # PostgreSQL RO Service
    - toServices:
        - k8sService:
            namespace: nextcloud
            serviceName: nextcloud-db-ro
      toPorts:
        - ports:
            - port: "5432"
    # PostgreSQL R Service (read)
    - toServices:
        - k8sService:
            namespace: nextcloud
            serviceName: nextcloud-db-r
      toPorts:
        - ports:
            - port: "5432"
    # Redis master service
    - toServices:
        - k8sService:
            namespace: nextcloud
            serviceName: rfrm-nextcloud-redis
      toPorts:
        - ports:
            - port: "6379"
    # Redis replica service
    - toServices:
        - k8sService:
            namespace: nextcloud
            serviceName: rfrs-nextcloud-redis
      toPorts:
        - ports:
            - port: "6379"
    # Fallback: allow to Redis pods by label
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nextcloud
            app.kubernetes.io/name: nextcloud-redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # DNS to CoreDNS
    - toServices:
        - k8sService:
            namespace: kube-system
            serviceName: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Fallback: allow to CNPG Pods
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: nextcloud
            cnpg.io/cluster: nextcloud-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Allow egress to Garage S3 (external endpoint behind cluster ingress)
    - toCIDR:
        - 192.168.222.13/32
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
            - port: "30188"
              protocol: TCP
    # Allow HTTPS/HTTP to internet (for app store, updates, etc.)
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
